Try China Glass

--- a/src/main/resources/assets/glassworld/lang/zh_cn.json
+++ b/src/main/resources/assets/glassworld/lang/zh_cn.json
@@ -1,5 +1,5 @@
 {
-  "item.glassworld.poop": "Poop",
+  "item.glassworld.iron_sand": "铁砂",
   "block.glassworld.condensed_dirt": "Condensed Dirt",
   "block.glassworld.super_glass": "中国玻璃"
 }
