--- a/src/main/resources/assets/glassworld/lang/zh_cn.json
+++ b/src/main/resources/assets/glassworld/lang/zh_cn.json
@@ -1,5 +1,6 @@
 {
   "item.glassworld.iron_sand": "铁砂",
   "block.glassworld.condensed_dirt": "Condensed Dirt",
-  "block.glassworld.super_glass": "中国玻璃"
+  "block.glassworld.super_glass": "中国玻璃",
+  "itemGroup.glassworld.super_glass": "中国玻璃相关物品"
 }
