--- a/src/main/resources/assets/glassworld/lang/en_us.json
+++ b/src/main/resources/assets/glassworld/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.glassworld.iron_sand": "Iron Sand",
   "block.glassworld.condensed_dirt": "Condensed Dirt",
+  "item.glassworld.instant_health_apple": "Super Apple",
   "block.glassworld.super_glass": "Super Glass",
   "itemGroup.glassworld.super_glass": "Things about Super Glass"
 }
