Now UPDATE! But not OK. Can't release now.

--- a/src/main/resources/assets/glassworld/lang/en_us.json
+++ b/src/main/resources/assets/glassworld/lang/en_us.json
@@ -3,5 +3,6 @@
   "block.glassworld.condensed_dirt": "Condensed Dirt",
   "item.glassworld.instant_health_apple": "Super Apple",
   "block.glassworld.super_glass": "Super Glass",
+  "block.glassworld.soft_super_glass": "Soft Super Glass",
   "itemGroup.glassworld.super_glass": "Things about Super Glass"
 }
