--- a/src/main/resources/assets/glassworld/lang/zh_cn.json
+++ b/src/main/resources/assets/glassworld/lang/zh_cn.json
@@ -3,5 +3,6 @@
   "item.glassworld.instant_health_apple": "超级苹果",
   "block.glassworld.condensed_dirt": "Condensed Dirt",
   "block.glassworld.super_glass": "中国玻璃",
-  "itemGroup.glassworld.super_glass": "中国玻璃相关物品"
+  "itemGroup.glassworld.super_glass": "中国玻璃相关物品",
+  "block.glassworld.soft_super_glass": "软中国玻璃"
 }
