Buff can go with a longer time now.

--- a/src/main/resources/assets/glassworld/lang/zh_cn.json
+++ b/src/main/resources/assets/glassworld/lang/zh_cn.json
@@ -4,5 +4,6 @@
   "block.glassworld.condensed_dirt": "Condensed Dirt",
   "block.glassworld.super_glass": "中国玻璃",
   "itemGroup.glassworld.super_glass": "中国玻璃相关物品",
-  "block.glassworld.soft_super_glass": "软中国玻璃"
+  "block.glassworld.soft_super_glass": "软中国玻璃",
+  "item.glassworld.guidite_sword": "神剑"
 }
