--- a/src/main/resources/assets/glassworld/lang/en_us.json
+++ b/src/main/resources/assets/glassworld/lang/en_us.json
@@ -4,5 +4,6 @@
   "item.glassworld.instant_health_apple": "Super Apple",
   "block.glassworld.super_glass": "Super Glass",
   "block.glassworld.soft_super_glass": "Soft Super Glass",
-  "itemGroup.glassworld.super_glass": "Things about Super Glass"
+  "itemGroup.glassworld.super_glass": "Things about Super Glass",
+  "item.glassworld.guidite_sword": "Super Sword"
 }
