Add an effect[Strong]-Not DONE

--- a/src/main/resources/assets/glassworld/lang/en_us.json
+++ b/src/main/resources/assets/glassworld/lang/en_us.json
@@ -5,5 +5,5 @@
   "block.glassworld.super_glass": "Super Glass",
   "block.glassworld.soft_super_glass": "Soft Super Glass",
   "itemGroup.glassworld.super_glass": "Things about Super Glass",
-  "item.glassworld.guidite_sword": "Super Sword"
+  "item.glassworld.guidite_sword": "Glass Sword"
 }
