--- a/src/main/resources/assets/glassworld/lang/en_us.json
+++ b/src/main/resources/assets/glassworld/lang/en_us.json
@@ -6,5 +6,5 @@
   "block.glassworld.soft_super_glass": "Soft Super Glass",
   "itemGroup.glassworld.super_glass": "Things about Super Glass",
   "item.glassworld.guidite_sword": "Glass Sword",
-  "effect.glassworld.exp": "Exp+3"
+  "effect.glassworld.exp": "Exp Adding"
 }
