--- a/src/main/resources/assets/glassworld/lang/en_us.json
+++ b/src/main/resources/assets/glassworld/lang/en_us.json
@@ -6,5 +6,6 @@
   "block.glassworld.soft_super_glass": "Soft Super Glass",
   "itemGroup.glassworld.super_glass": "Things about Super Glass",
   "item.glassworld.guidite_sword": "Glass Sword",
+  "item.glassworld.super_pickaxe": "Super Glass Pickaxe",
   "effect.glassworld.exp": "Exp Adding"
 }
