--- a/src/main/resources/assets/glassworld/lang/en_us.json
+++ b/src/main/resources/assets/glassworld/lang/en_us.json
@@ -1,11 +1,20 @@
 {
-  "item.glassworld.iron_sand": "Iron Sand",
   "block.glassworld.condensed_dirt": "Condensed Dirt",
-  "item.glassworld.instant_health_apple": "Super Apple",
-  "block.glassworld.super_glass": "Super Glass",
   "block.glassworld.soft_super_glass": "Soft Super Glass",
-  "itemGroup.glassworld.super_glass": "Things about Super Glass",
+  "block.glassworld.super_glass": "Super Glass",
+  "effect.glassworld.exp": "Exp Adding",
   "item.glassworld.guidite_sword": "Glass Sword",
+  "item.glassworld.instant_health_apple": "Super Apple",
+  "item.glassworld.iron_sand": "Iron Sand",
   "item.glassworld.super_pickaxe": "Super Glass Pickaxe",
-  "effect.glassworld.exp": "Exp Adding"
+  "item.glassworld.super_axe": "Super Glass Axe",
+  "item.glassworld.super_hoe": "Super Glass Hoe",
+  "item.glassworld.super_shovel": "Super Glass Shovel",
+  "item.glassworld.super_sword": "Super Glass Sword",
+  "item.glassworld.ancient_pickaxe": "Ancient Glass Pickaxe",
+  "item.glassworld.ancient_axe": "Ancient Glass Axe",
+  "item.glassworld.ancient_sword": "Ancient Glass Sword",
+  "item.glassworld.ancient_shovel": "Ancient Glass Shovel",
+  "item.glassworld.ancient_hoe": "Ancient Glass Hoe",
+  "itemGroup.glassworld.super_glass": "Things about Super Glass"
 }
