Major Update-20240128-04 Add many tools!

--- a/src/main/resources/assets/glassworld/lang/en_us.json
+++ b/src/main/resources/assets/glassworld/lang/en_us.json
@@ -2,6 +2,8 @@
   "block.glassworld.condensed_dirt": "Condensed Dirt",
   "block.glassworld.soft_super_glass": "Soft Super Glass",
   "block.glassworld.super_glass": "Super Glass",
+  "block.glassworld.ancient_glass": "Ancient Glass",
+  "block.glassworld.soft_ancient_glass": "Soft Ancient Glass",
   "effect.glassworld.exp": "Exp Adding",
   "item.glassworld.guidite_sword": "Glass Sword",
   "item.glassworld.instant_health_apple": "Super Apple",
