--- a/src/main/resources/assets/glassworld/lang/zh_cn.json
+++ b/src/main/resources/assets/glassworld/lang/zh_cn.json
@@ -1,5 +1,7 @@
 {
+  "block.glassworld.ancient_glass": "远古玻璃",
   "block.glassworld.condensed_dirt": "砂土",
+  "block.glassworld.soft_ancient_glass": "软远古玻璃",
   "block.glassworld.soft_super_glass": "软中国玻璃",
   "block.glassworld.super_glass": "中国玻璃",
   "effect.glassworld.exp": "经验加成",
