--- a/src/main/resources/assets/glassworld/lang/zh_cn.json
+++ b/src/main/resources/assets/glassworld/lang/zh_cn.json
@@ -18,5 +18,7 @@
   "item.glassworld.super_pickaxe": "中国玻璃稿",
   "item.glassworld.super_shovel": "中国玻璃铲",
   "item.glassworld.super_sword": "中国玻璃剑",
+  "item.minecraft.smithing_template.netherite_upgrade.additions_slot_description": "放入下界合金锭或远古玻璃",
+  "item.minecraft.smithing_template.netherite_upgrade.base_slot_description": "放入钻石或中国玻璃盔甲、武器或工具",
   "itemGroup.glassworld.super_glass": "中国玻璃相关物品"
 }
