--- a/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -2,5 +2,5 @@
   "item.minecraft.smithing_template.netherite_upgrade.additions_slot_description": "放入下界合金锭或远古玻璃",
   "item.minecraft.smithing_template.netherite_upgrade.base_slot_description": "放入钻石或中国玻璃盔甲、武器或工具",
   "item.minecraft.smithing_template.netherite_upgrade.applies_to": "Diamond and Super Glass Equipment",
-  "item.minecraft.smithing_template.netherite_upgrade.ingredients": "Netherite Ingot or Ancient Glass"
+  "item.minecraft.smithing_template.netherite_upgrade.ingredients": "下界合金锭或远古玻璃"
 }
