Major Update-20240201-04 Untested

--- a/src/main/resources/assets/glassworld/lang/en_us.json
+++ b/src/main/resources/assets/glassworld/lang/en_us.json
@@ -1,22 +1,26 @@
 {
+  "block.glassworld.ancient_glass": "Ancient Glass",
   "block.glassworld.condensed_dirt": "Condensed Dirt",
+  "block.glassworld.soft_ancient_glass": "Soft Ancient Glass",
   "block.glassworld.soft_super_glass": "Soft Super Glass",
   "block.glassworld.super_glass": "Super Glass",
-  "block.glassworld.ancient_glass": "Ancient Glass",
-  "block.glassworld.soft_ancient_glass": "Soft Ancient Glass",
   "effect.glassworld.exp": "Exp Adding",
+  "item.glassworld.ancient_axe": "Ancient Glass Axe",
+  "item.glassworld.ancient_hoe": "Ancient Glass Hoe",
+  "item.glassworld.ancient_pickaxe": "Ancient Glass Pickaxe",
+  "item.glassworld.ancient_shovel": "Ancient Glass Shovel",
+  "item.glassworld.ancient_sword": "Ancient Glass Sword",
   "item.glassworld.guidite_sword": "Glass Sword",
   "item.glassworld.instant_health_apple": "Super Apple",
   "item.glassworld.iron_sand": "Iron Sand",
-  "item.glassworld.super_pickaxe": "Super Glass Pickaxe",
   "item.glassworld.super_axe": "Super Glass Axe",
+  "item.glassworld.super_boots": "Super Glass Boots",
+  "item.glassworld.super_chestplate": "Super Glass Chestplate",
+  "item.glassworld.super_helmet": "Super Glass Helmet",
   "item.glassworld.super_hoe": "Super Glass Hoe",
+  "item.glassworld.super_leggings": "Super Glass Leggings",
+  "item.glassworld.super_pickaxe": "Super Glass Pickaxe",
   "item.glassworld.super_shovel": "Super Glass Shovel",
   "item.glassworld.super_sword": "Super Glass Sword",
-  "item.glassworld.ancient_pickaxe": "Ancient Glass Pickaxe",
-  "item.glassworld.ancient_axe": "Ancient Glass Axe",
-  "item.glassworld.ancient_sword": "Ancient Glass Sword",
-  "item.glassworld.ancient_shovel": "Ancient Glass Shovel",
-  "item.glassworld.ancient_hoe": "Ancient Glass Hoe",
   "itemGroup.glassworld.super_glass": "Things about Super Glass"
 }
