--- a/src/main/resources/assets/glassworld/lang/zh_cn.json
+++ b/src/main/resources/assets/glassworld/lang/zh_cn.json
@@ -14,7 +14,11 @@
   "item.glassworld.instant_health_apple": "超级苹果",
   "item.glassworld.iron_sand": "铁砂",
   "item.glassworld.super_axe": "中国玻璃斧",
+  "item.glassworld.super_boots": "中国玻璃靴子",
+  "item.glassworld.super_chestplate": "中国玻璃胸甲",
+  "item.glassworld.super_helmet": "中国玻璃头盔",
   "item.glassworld.super_hoe": "中国玻璃锄",
+  "item.glassworld.super_leggings": "中国玻璃护腿",
   "item.glassworld.super_pickaxe": "中国玻璃稿",
   "item.glassworld.super_shovel": "中国玻璃铲",
   "item.glassworld.super_sword": "中国玻璃剑",
