--- a/src/main/resources/assets/glassworld/lang/en_us.json
+++ b/src/main/resources/assets/glassworld/lang/en_us.json
@@ -6,7 +6,11 @@
   "block.glassworld.super_glass": "Super Glass",
   "effect.glassworld.exp": "Exp Adding",
   "item.glassworld.ancient_axe": "Ancient Glass Axe",
+  "item.glassworld.ancient_boots": "Ancient Glass Boots",
+  "item.glassworld.ancient_chestplate": "Ancient Glass Chestplate",
+  "item.glassworld.ancient_helmet": "Ancient Glass Helmet",
   "item.glassworld.ancient_hoe": "Ancient Glass Hoe",
+  "item.glassworld.ancient_leggings": "Ancient Glass Leggings",
   "item.glassworld.ancient_pickaxe": "Ancient Glass Pickaxe",
   "item.glassworld.ancient_shovel": "Ancient Glass Shovel",
   "item.glassworld.ancient_sword": "Ancient Glass Sword",
