--- a/src/main/resources/assets/glassworld/lang/zh_cn.json
+++ b/src/main/resources/assets/glassworld/lang/zh_cn.json
@@ -6,7 +6,11 @@
   "block.glassworld.super_glass": "中国玻璃",
   "effect.glassworld.exp": "经验加成",
   "item.glassworld.ancient_axe": "远古玻璃斧",
+  "item.glassworld.ancient_boots": "远古玻璃靴子",
+  "item.glassworld.ancient_chestplate": "远古玻璃胸甲",
+  "item.glassworld.ancient_helmet": "远古玻璃头盔",
   "item.glassworld.ancient_hoe": "远古玻璃锄",
+  "item.glassworld.ancient_leggings": "远古玻璃护腿",
   "item.glassworld.ancient_pickaxe": "远古玻璃稿",
   "item.glassworld.ancient_shovel": "远古玻璃铲",
   "item.glassworld.ancient_sword": "远古玻璃剑",
