Major Update-20240202-05 Last release in Feb

--- a/src/main/resources/assets/glassworld/lang/en_us.json
+++ b/src/main/resources/assets/glassworld/lang/en_us.json
@@ -26,6 +26,5 @@
   "item.glassworld.super_pickaxe": "Super Glass Pickaxe",
   "item.glassworld.super_shovel": "Super Glass Shovel",
   "item.glassworld.super_sword": "Super Glass Sword",
-  "itemGroup.glassworld.super_glass": "Things about Super Glass",
-  "item.glassworld.netherite_shield": "Netherite Shield"
+  "itemGroup.glassworld.super_glass": "Things about Super Glass"
 }
