Major Update! Add MANY MANY New BLOCKS

--- a/src/main/resources/assets/glassworld/lang/en_us.json
+++ b/src/main/resources/assets/glassworld/lang/en_us.json
@@ -1,8 +1,19 @@
 {
+  "block.glassworld.purified_glass": "Purified Glass",
   "block.glassworld.ancient_glass": "Ancient Glass",
   "block.glassworld.soft_ancient_glass": "Soft Ancient Glass",
   "block.glassworld.soft_diamond_glass": "Soft Diamond Glass",
   "block.glassworld.diamond_glass": "Diamond Glass",
+  "block.glassworld.golden_glass": "Golden Glass",
+  "block.glassworld.soft_golden_glass": "Soft Golden Glass",
+  "block.glassworld.redstone_glass": "Redstone Glass",
+  "block.glassworld.soft_redstone_glass": "Soft Redstone Glass",
+  "block.glassworld.iron_glass": "Iron Glass",
+  "block.glassworld.soft_iron_glass": "Soft Iron Glass",
+  "block.glassworld.emerald_glass": "Emerald Glass",
+  "block.glassworld.soft_emerald_glass": "Soft Emerald Glass",
+  "block.glassworld.copper_glass": "Copper Glass",
+  "block.glassworld.soft_copper_glass": "Soft Copper Glass",
   "effect.glassworld.exp": "Exp",
   "item.glassworld.ancient_glass_axe": "Ancient Glass Axe",
   "item.glassworld.ancient_glass_boots": "Ancient Glass Boots",
