--- a/src/main/resources/assets/glassworld/lang/zh_cn.json
+++ b/src/main/resources/assets/glassworld/lang/zh_cn.json
@@ -1,8 +1,19 @@
 {
+  "block.glassworld.purified_glass": "纯化玻璃",
   "block.glassworld.ancient_glass": "远古玻璃",
   "block.glassworld.soft_ancient_glass": "软远古玻璃",
   "block.glassworld.soft_diamond_glass": "软钻石玻璃",
   "block.glassworld.diamond_glass": "钻石玻璃",
+  "block.glassworld.golden_glass": "镀金玻璃",
+  "block.glassworld.soft_golden_glass": "软镀金玻璃",
+  "block.glassworld.redstone_glass": "红石玻璃",
+  "block.glassworld.soft_redstone_glass": "软红石玻璃",
+  "block.glassworld.iron_glass": "钢化玻璃",
+  "block.glassworld.soft_iron_glass": "软钢化玻璃",
+  "block.glassworld.emerald_glass": "绿石玻璃",
+  "block.glassworld.soft_emerald_glass": "软绿石玻璃",
+  "block.glassworld.copper_glass": "镀铜玻璃",
+  "block.glassworld.soft_copper_glass": "镀铜玻璃",
   "effect.glassworld.exp": "经验加成",
   "item.glassworld.ancient_glass_axe": "远古玻璃斧",
   "item.glassworld.ancient_glass_boots": "远古玻璃靴子",
