Major Update! Add types of sand and recipes for all current blocks

--- a/src/main/resources/assets/glassworld/lang/en_us.json
+++ b/src/main/resources/assets/glassworld/lang/en_us.json
@@ -14,6 +14,13 @@
   "block.glassworld.soft_emerald_glass": "Soft Emerald Glass",
   "block.glassworld.copper_glass": "Copper Glass",
   "block.glassworld.soft_copper_glass": "Soft Copper Glass",
+  "block.glassworld.iron_sand": "Iron Sand",
+  "block.glassworld.golden_sand": "Golden Sand",
+  "block.glassworld.emerald_sand": "Emerald Sand",
+  "block.glassworld.copper_sand": "Copper Sand",
+  "block.glassworld.diamond_sand": "Diamond Sand",
+  "block.glassworld.redstone_sand": "Redstone Sand",
+  "block.glassworld.ancient_soul_sand": "Ancient Soul Sand",
   "effect.glassworld.exp": "Exp",
   "item.glassworld.ancient_glass_axe": "Ancient Glass Axe",
   "item.glassworld.ancient_glass_boots": "Ancient Glass Boots",
@@ -25,7 +32,6 @@
   "item.glassworld.ancient_glass_shovel": "Ancient Glass Shovel",
   "item.glassworld.ancient_glass_sword": "Ancient Glass Sword",
   "item.glassworld.instant_health_apple": "Super Apple",
-  "item.glassworld.iron_sand": "Iron Sand",
   "item.glassworld.diamond_glass_axe": "Diamond Glass Axe",
   "item.glassworld.diamond_glass_boots": "Diamond Glass Boots",
   "item.glassworld.diamond_glass_chestplate": "Diamond Glass Chestplate",
